# social_isolation_interview_agent

./: .gitignore  AGENTS.md  README.md  app.py  claude.md  interview_flow.json  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.example.toml
app/: auth.py  config.py
app_core/: __init__.py  auth.py  config.py
archive/: main.py
interview/: __init__.py  controller.py  flow_engine.py  prompts.py  rule_engine.py  state_manager.py
logs/: __init__.py  interview_logger.py
pages/: chat.py  result.py
references/: interview_flow_v2.json  isolation_recoding_r1.md
storage/: __init__.py  json_storage.py
