[project]
name = "social-isolation-interview-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.7",
    "pandas>=2.3.2",
    "ploomber-cloud>=0.4.5",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
]
